# CallManagement

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
admin-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx
admin-ui/src/components/: AgentFleetStatus.tsx  ApiKeysPanel.tsx  Breadcrumbs.tsx  CallRecordingPlayer.tsx  Layout.tsx  (+11 more)
data/: crm.db
docs/: ADMIN.md  AGENTS.md  ANALYTICS.md  DEPLOYMENT.md  TELEPHONY.md
examples/: demo_text.py  outbound_call.py  real_xai_conversation.py
examples/dispatch_rules/: call-management-inbound.json  call-management-support.json
scripts/: bootstrap_telephony.sh  healthcheck.py  init_crm.py  seed_demo_company.py  setup_livekit_inbound.py  setup_recordings_minio.sh  test_telephony_inbound.py
scripts/deploy/: callmanagement-worker.service  callmanagement.service  install.sh  nginx-callmgmt.conf  nginx-minio-s3.conf
src/call_management/: __init__.py  agent_store.py  cli.py  config.py  console_cli.py  dev_check.py  server.py
tests/: conftest.py  test_admin.py  test_admin_auth.py  test_agent_store.py  test_basic.py  test_caller_id.py  test_console_cli.py  test_dev_check.py  test_eleven_features.py  test_export_report.py  test_modules_permissions.py  test_notifications.py  test_recordings_store.py  test_reports.py  test_scheduling.py  test_tenancy.py  test_tenant_api.py  test_transcript_persist.py  test_voice_tool_runner.py  test_xai_mcp.py  test_xai_tools.py  test_xai_voice.py
(+108 files in other folders)
